test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/nonnullableobjects.widl
interface Foo {};

interface NonNullable {
  attribute Foo??
    foo;
};
